Session handling (minimum login and logout)

--- a/lib/snl_web/templates/layout/_flash.html.eex
+++ b/lib/snl_web/templates/layout/_flash.html.eex
@@ -1,6 +1,8 @@
-<section class="section">
+<section class="section flash-message">
   <div class="container">
-    <p class="notification is-info"><%= get_flash(@conn, :info) %></p>
-    <p class="notification is-danger"><%= get_flash(@conn, :error) %></p>
+    <p class="notification <%= flash_class(@type) %>">
+      <button class="delete" data-delete=".flash-message"></button>
+      <%= @message %>
+    </p>
   </div>
 </section>
