--- a/lib/snl_web/templates/layout/app.html.eex
+++ b/lib/snl_web/templates/layout/app.html.eex
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title><%= gettext "Stl App" %></title>
+    <title><%= gettext "Snl App" %></title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
-    <%= render "_menu.html", conn: @conn %>
-
-    <%= if show_flash_messages?(@conn) do %>
-      <%= render "_flash.html", conn: @conn %>
+    <%= if @current_user do %>
+      <%= render "_menu.html", conn: @conn %>
     <% end %>
 
+    <%= render_flash @conn %>
+
     <%= render @view_module, @view_template, assigns %>
+
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
