--- a/lib/snl_web/templates/user/form.html.eex
+++ b/lib/snl_web/templates/user/form.html.eex
@@ -30,6 +30,14 @@
   </div>
 
   <div class="field">
+    <%= label f, :password, gettext("Password"), class: "label" %>
+    <div class="control">
+      <%= password_input f, :password, class: "input" %>
+    </div>
+    <%= error_tag f, :password %>
+  </div>
+
+  <div class="field">
     <p class="control">
       <%= submit gettext("Submit"), class: "button is-primary" %>
     </p>
