--- a/lib/snl_web/templates/user/index.html.eex
+++ b/lib/snl_web/templates/user/index.html.eex
@@ -22,18 +22,9 @@
             <td class="is-hidden-mobile"><%= user.email %></td>
 
             <td class="has-text-right">
-              <span>
-                <%= link gettext("Show"), to: user_path(@conn, :show, user), class: "button is-small" %>
-              </span>
-              <span>
-                <%= link gettext("Edit"), to: user_path(@conn, :edit, user), class: "button is-small" %>
-              </span>
-              <span>
-                <%= link gettext("Delete"), to:     user_path(@conn, :delete, user),
-                                            method: :delete,
-                                            data:   [confirm: gettext("Are you sure?")],
-                                            class:  "button is-small is-danger" %>
-              </span>
+              <span><%= link_to_show   @conn, user %></span>
+              <span><%= link_to_edit   @conn, user %></span>
+              <span><%= link_to_delete @conn, user %></span>
             </td>
           </tr>
         <% end %>
