--- a/lib/snl_web/templates/user/edit.html.eex
+++ b/lib/snl_web/templates/user/edit.html.eex
@@ -4,7 +4,7 @@
       <%= gettext "Edit user" %>
     </h2>
 
-    <%= render "form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
+    <%= render "_form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
   </div>
 </section>
 
