--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,16 +1,11 @@
 @charset "utf-8";
 
 // Bulma
-@import "node_modules/bulma/sass/utilities/_all";
-@import "node_modules/bulma/sass/base/_all";
-@import "node_modules/bulma/sass/elements/_all";
-@import "node_modules/bulma/sass/components/_all";
-@import "node_modules/bulma/sass/grid/_all";
-@import "node_modules/bulma/sass/layout/_all";
+@import "bulma";
 
 // Font Awesome
 $fa-font-path: "/fonts/font-awesome";
-@import "node_modules/font-awesome/scss/font-awesome";
+@import "font-awesome";
 
 // App
 @import "main";
