Use gettext on user's show

--- a/lib/snl_web/templates/user/show.html.eex
+++ b/lib/snl_web/templates/user/show.html.eex
@@ -4,7 +4,7 @@
 
     <ul>
       <li>
-        <strong>Email:</strong>
+        <strong><%= gettext("Email") %>:</strong>
         <%= link @user.email, to: "mailto:#{@user.email}" %>
       </li>
     </ul>
